# pastey

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
paste-compat/: Cargo.toml  test.sh
paste-compat/tests/: integrated.rs
pastey-test-suite/: Cargo.toml
pastey-test-suite/tests/: test_attr.rs  test_item.rs
pastey-test-suite/tests/ui/: raw-mode-wrong-position.stderr
src/: lib.rs  segment.rs
tests/: test_attr.rs  test_expr.rs  test_item.rs
tests/macros/: Cargo.toml
tests/ui/: invalid-ident.rs
